--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--</html>-->
 
 <ul>
-  <li>Grilled Cheese Sandwiches
+  Grilled Cheese Sandwiches
     <ul>
       <li>2 slices of bread</li>
       <li>4 slices of cheese</li>
