--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <ul>
       <li>2 slices of bread</li>
       <li>4 slices of cheese</li>
-         <ul>cheddar</ul>
-         <ul>mozzarella</ul>
+         <ul>cheddar
+         <li></li>mozzarella</ul>
          <ul>pepper jack</ul>
       <li>1 tbsp of butter</li>
     </ul>
