--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <ul>
       <li>2 slices of bread</li>
       <li>4 slices of cheese</li>
-         <ul>cheddar
-         <li></li>mozzarella</ul>
-         <ul>pepper jack</ul>
+         <ul>
+          <li>cheddar</li>
+          <li>mozzarella</li>
+          <li>pepper jack</li>
       <li>1 tbsp of butter</li>
+        </ul>
     </ul>
  
