--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
  <h3>Steps to making a grilled cheese</h3>
 <ol>
-  <li>
+  <li>Spread butter on bread and frying pan
   <li>Sushi
   <li>Cheese and crackers
   <li>Cheese soup
