--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  <h3>Steps to making a grilled cheese</h3>
 <ol>
   <li>Spread butter on bread and frying pan
-  <li>Sushi
+  <li>Place bread in frying pan and fry
   <li>Cheese and crackers
   <li>Cheese soup
   <li>Nacho Cheese French Fries
